# todo-app-rust

./: Cargo.toml
src/: main.rs
src/api/: health_check.rs
src/services/: authorization.rs  mod.rs  sequential_id.rs
tests/services/: mod.rs  sequential_id_test.rs
